# spark-analysis

./: .travis.yml  README.md  data_import.py  eventcount.py  launcher.py  requirements.txt  setup.cfg  setup.py  sparkles.py
data/paths/: keys.txt
etc/: config.yml  config.yml.template
modules/: data_import.py  eventcount.py  liq_curve.py  liq_curve_parquet.py  moduletemplate.py
modules/utils/: .helper.py.swp  helper.py  models.py  runner.py  test.py
paths/: f.csv
spark_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sparkles/: models.py  runner.py  sparkles_shell.py
sparkles/modules/: .event_count_parquet.py.swp  data_import.py  event_count.py  event_count_parquet.py  liq_curve.py  liq_curve_parquet.py  moduletemplate.py
sparkles/modules/event_count_parquet/: event_count_parquet.py
sparkles/modules/tests/: dataframe_mock.py  func_test.py  helper_test.py  interface_tests.py  runner_test.py  side_effects.py
sparkles/modules/utils/: helper.py  models.py  runner.py  sparkles.py
