[metadata]
name = spark-analysis
author = Apurva Nandan
author-email = apurva.nandan@csc.fi
summary = Interfaces to manage cloud resource access
license = MIT
version = 1.0
description-file =
    README.md
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    [
    ]
